smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/dangling-with.smithy
// Syntax error at line 6, column 1: Expected LBRACKET('[') but found EOF | Model
$version: "2"
namespace com.foo

structure Foo with
